kgateway-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: retail-route
  namespace: thanu-ns1
 
spec:
  parentRefs:
    - name: newkgateway
  rules: #path based routing
    - matches:
      - path:
          type: PathPrefix
          value: /retail
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: capsule-service
          port: 80
